# cs4675_Project

./: .dockerignore  .env  .gitignore  CASE_PRESENTATION_SCRIPT.md  CASE_RESULTS.md  Dockerfile  README.md  benchmark.py  docker-compose.yml  extracted_urls.csv  print_db.py  pyproject.toml  requirements.txt  run.py
.deps/flask-3.1.3.dist-info/: RECORD
.deps/python_dotenv-1.2.2.dist-info/: RECORD
.deps/waitress-3.0.2.dist-info/: RECORD
app/: __init__.py  models.py  routes.py  service.py  storage.py
app/templates/: index.html
benchmarks/concurrency/20260417-152237/: concurrency-study-summary.json  concurrency-study-summary.md  graphs.html  multi-node-read-heavy-c16.json  multi-node-read-heavy-c4.json  multi-node-read-heavy-c8.json  multi-node-shorten-heavy-c16.json  multi-node-shorten-heavy-c4.json  multi-node-shorten-heavy-c8.json  single-node-read-heavy-c16.json  single-node-read-heavy-c4.json  single-node-read-heavy-c8.json  single-node-shorten-heavy-c16.json  single-node-shorten-heavy-c4.json  single-node-shorten-heavy-c8.json
cs4675_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
deploy/nginx/: nginx.conf
tests/: test_stage1_api.py  test_stage5_benchmark.py
