[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cs4675-project"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.1.0",
    "flask>=3.0,<4.0",
    "waitress>=3.0,<4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
]

[tool.setuptools]
packages = ["app"]
py-modules = ["run", "print_db", "benchmark"]

[tool.pytest.ini_options]
pythonpath = ["."]
